* Reseed, peermanager, transport, ntcp, udp, tunnel, tunnel pool       - Findbugs       - Replace "ghetto" mark/reset       - Remove dead code in TrivialPreprocessor       - More efficient UDP peer sort       - finals